--- a/gnome-base/gnome-light/ChangeLog
+++ b/gnome-base/gnome-light/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/gnome-light
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.53 2007/06/02 03:01:08 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-light/ChangeLog,v 1.54 2007/06/15 21:19:40 remi Exp $
+
+*gnome-light-2.18.0 (15 Jun 2007)
+
+  15 Jun 2007; Remi Cardona <remi@gentoo.org> +gnome-light-2.18.0.ebuild:
+  bump to 2.18.0 (thanks to Matt Hamilton for the updated deps)
 
   02 Jun 2007; Brent Baude <ranger@gentoo.org> gnome-light-2.16.3.ebuild:
   Marking gnome-light-2.16.3 ppc stable for bug #171107
