--- a/mail-mta/sendmail/ChangeLog
+++ b/mail-mta/sendmail/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for mail-mta/sendmail
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/sendmail/ChangeLog,v 1.75 2007/04/28 16:54:46 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/sendmail/ChangeLog,v 1.76 2007/06/15 21:38:47 armin76 Exp $
+
+  15 Jun 2007; Raúl Porcel <armin76@gentoo.org> sendmail-8.13.8.ebuild,
+  sendmail-8.14.0.ebuild:
+  alpha stable wrt #167206
 
   28 Apr 2007; Sven Wegener <swegener@gentoo.org> sendmail-8.13.6-r1.ebuild,
   sendmail-8.13.7.ebuild, sendmail-8.13.7-r1.ebuild, sendmail-8.13.8.ebuild,
