--- a/x11-libs/libX11/ChangeLog
+++ b/x11-libs/libX11/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.73 2007/06/05 23:40:23 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.74 2007/06/15 21:50:52 cardoe Exp $
+
+*libX11-1.1.2-r1 (15 Jun 2007)
+
+  15 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
+  +files/libX11-1.1.2-XGetMotionEvents-order-fix.patch,
+  +files/libX11-1.1.2-XimGetWindowEventmask-fix.patch,
+  +libX11-1.1.2-r1.ebuild:
+  upstream patches for bug #156367 and bug #181707, which should solve several
+  user issues
 
 *libX11-1.1.2 (05 Jun 2007)
 
