--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.132 2007/06/15 20:46:48 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.133 2007/06/15 21:55:05 cardoe Exp $
+
+  15 Jun 2007; Doug Goldstein <cardoe@gentoo.org>
+  +files/cairo-1.4.8-XError.patch, cairo-1.4.8.ebuild:
+  upstream fix for bug #182058 and bug #182127
 
   15 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> cairo-1.4.6.ebuild:
   ppc stable, bug #176367
