--- a/dev-python/pycairo/ChangeLog
+++ b/dev-python/pycairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pycairo
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.39 2007/05/27 02:42:43 kumba Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pycairo/ChangeLog,v 1.40 2007/06/15 22:01:20 cardoe Exp $
+
+  15 Jun 2007; Doug Goldstein <cardoe@gentoo.org> -pycairo-1.0.2.ebuild:
+  remove old version since cairo 1.0.x is going bye bye
 
   27 May 2007; Joshua Kinard <kumba@gentoo.org> pycairo-1.2.6.ebuild:
   Stable on mips.
