--- a/media-libs/libprojectm/ChangeLog
+++ b/media-libs/libprojectm/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libprojectm
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libprojectm/ChangeLog,v 1.10 2007/04/15 20:46:18 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libprojectm/ChangeLog,v 1.11 2007/06/15 22:34:49 kumba Exp $
+
+  15 Jun 2007; Joshua Kinard <kumba@gentoo.org> libprojectm-0.99-r1.ebuild:
+  Stable on mips.
 
   15 Apr 2007; Peter Weller <welp@gentoo.org> libprojectm-0.99-r1.ebuild:
   Stable on amd64
