--- a/media-sound/bitmeter/ChangeLog
+++ b/media-sound/bitmeter/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/bitmeter
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/bitmeter/ChangeLog,v 1.2 2007/06/15 13:07:10 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/bitmeter/ChangeLog,v 1.3 2007/06/15 23:06:34 angelos Exp $
+
+  15 Jun 2007; Christoph Mende <angelos@gentoo.org> bitmeter-1.2.ebuild:
+  Added ~amd64 wrt bug 135050
 
   15 Jun 2007; Gustavo Zacarias <gustavoz@gentoo.org> bitmeter-1.2.ebuild:
   Keyworded ~sparc wrt #135050
