--- a/sys-apps/util-linux/ChangeLog
+++ b/sys-apps/util-linux/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/util-linux
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.192 2007/06/13 03:27:24 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/util-linux/ChangeLog,v 1.193 2007/06/15 23:30:31 lavajoe Exp $
+
+  15 Jun 2007; Joe Peterson <lavajoe@gentoo.org> util-linux-2.12r-r7.ebuild:
+  Add blocker: sys-apps/more (since both provide the "more" pager)
 
   13 Jun 2007; Mike Frysinger <vapier@gentoo.org>
   util-linux-2.12r-r7.ebuild, util-linux-9999.ebuild:
