--- a/media-fonts/font-adobe-utopia-75dpi/ChangeLog
+++ b/media-fonts/font-adobe-utopia-75dpi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-adobe-utopia-75dpi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-adobe-utopia-75dpi/ChangeLog,v 1.22 2007/06/06 01:16:14 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-adobe-utopia-75dpi/ChangeLog,v 1.23 2007/06/16 00:00:47 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  font-adobe-utopia-75dpi-1.0.1.ebuild:
+  Stable on amd64 wrt bug 180609
 
   06 Jun 2007; Jeroen Roovers <jer@gentoo.org>
   font-adobe-utopia-75dpi-1.0.1.ebuild:
