--- a/media-libs/libmms/ChangeLog
+++ b/media-libs/libmms/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libmms
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libmms/ChangeLog,v 1.19 2007/04/15 20:34:57 welp Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libmms/ChangeLog,v 1.20 2007/06/16 00:02:44 kumba Exp $
+
+  16 Jun 2007; Joshua Kinard <kumba@gentoo.org> libmms-0.3.ebuild:
+  Stable on mips.
 
   15 Apr 2007; Peter Weller <welp@gentoo.org> libmms-0.3.ebuild:
   Stable on amd64
