--- a/media-sound/wavpack/ChangeLog
+++ b/media-sound/wavpack/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/wavpack
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/ChangeLog,v 1.25 2007/06/12 14:05:54 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/wavpack/ChangeLog,v 1.26 2007/06/16 00:05:06 kumba Exp $
+
+  16 Jun 2007; Joshua Kinard <kumba@gentoo.org> wavpack-4.40.0.ebuild:
+  Stable on mips.
 
   12 Jun 2007; Diego Pettenò <flameeyes@gentoo.org> wavpack-4.41.0.ebuild:
   Execute elibtoolize for Gentoo/FreeBSD.
