--- a/media-plugins/audacious-plugins/ChangeLog
+++ b/media-plugins/audacious-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/audacious-plugins
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.55 2007/06/07 16:23:12 chainsaw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-plugins/audacious-plugins/ChangeLog,v 1.56 2007/06/16 00:07:50 kumba Exp $
+
+  15 Jun 2007; Joshua Kinard <kumba@gentoo.org>
+  audacious-plugins-1.3.3.ebuild:
+  Stable on mips, per #182116.
 
 *audacious-plugins-1.3.5 (07 Jun 2007)
 
