--- a/dev-lang/dmd-bin/ChangeLog
+++ b/dev-lang/dmd-bin/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/dmd-bin
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/dmd-bin/ChangeLog,v 1.5 2007/05/20 21:23:08 anant Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/dmd-bin/ChangeLog,v 1.6 2007/06/16 00:27:47 anant Exp $
+
+*dmd-bin-1.015 (16 Jun 2007)
+
+  16 Jun 2007; Anant Narayanan <anant@gentoo.org> +dmd-bin-1.015.ebuild:
+  vBump to 1.015, closes bug #181663
 
 *dmd-bin-1.014 (21 May 2007)
 
