--- a/app-misc/roadnav/ChangeLog
+++ b/app-misc/roadnav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/roadnav
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/roadnav/ChangeLog,v 1.4 2007/05/31 02:06:58 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/roadnav/ChangeLog,v 1.5 2007/06/16 00:57:46 dirtyepic Exp $
+
+  16 Jun 2007; Ryan Hill <dirtyepic@gentoo.org> roadnav-0.16.ebuild:
+  Use wxwidgets.eclass, bug #175632.
 
   31 May 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove myself as I'm retiring.
