--- a/dev-lisp/sbcl/ChangeLog
+++ b/dev-lisp/sbcl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-lisp/sbcl
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.110 2007/06/13 23:57:25 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/ChangeLog,v 1.111 2007/06/16 01:32:14 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org> sbcl-1.0.4.ebuild:
+  Stable on amd64 wrt bug 180118
 
   13 Jun 2007; Christian Faulhammer <opfer@gentoo.org> sbcl-1.0.4.ebuild:
   stable x86, bug 180118; double negation changed to normal test for source
