--- a/media-fonts/font-bh-100dpi/ChangeLog
+++ b/media-fonts/font-bh-100dpi/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-bh-100dpi
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bh-100dpi/ChangeLog,v 1.21 2007/06/10 13:31:29 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bh-100dpi/ChangeLog,v 1.22 2007/06/16 02:06:24 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  font-bh-100dpi-1.0.0.ebuild:
+  Stable on amd64 wrt bug 181091
 
   10 Jun 2007; Raúl Porcel <armin76@gentoo.org>
   font-bh-100dpi-1.0.0.ebuild:
