--- a/media-fonts/font-bh-ttf/ChangeLog
+++ b/media-fonts/font-bh-ttf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/font-bh-ttf
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bh-ttf/ChangeLog,v 1.31 2007/06/10 13:33:26 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-bh-ttf/ChangeLog,v 1.32 2007/06/16 02:08:23 angelos Exp $
+
+  16 Jun 2007; Christoph Mende <angelos@gentoo.org>
+  font-bh-ttf-1.0.0.ebuild:
+  Stable on amd64 wrt bug 181091
 
   10 Jun 2007; Raúl Porcel <armin76@gentoo.org> font-bh-ttf-1.0.0.ebuild:
   x86 stable wrt #181091
