--- a/media-sound/sound-juicer/ChangeLog
+++ b/media-sound/sound-juicer/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/sound-juicer
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.131 2008/02/04 04:12:13 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sound-juicer/ChangeLog,v 1.132 2008/03/09 21:54:58 leio Exp $
+
+  09 Mar 2008; Mart Raudsepp <leio@gentoo.org> -sound-juicer-2.16.4.ebuild,
+  -sound-juicer-2.20.0.ebuild, -sound-juicer-2.20.1.ebuild:
+  Remove old versions
 
   04 Feb 2008; Jeroen Roovers <jer@gentoo.org>
   sound-juicer-2.20.1-r1.ebuild:
