--- a/net-wireless/bluez-libs/ChangeLog
+++ b/net-wireless/bluez-libs/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for net-wireless/bluez-libs
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.101 2008/02/27 22:13:25 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-libs/ChangeLog,v 1.102 2008/03/09 21:59:40 eva Exp $
+
+*bluez-libs-3.28 (09 Mar 2008)
+
+  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -bluez-libs-3.19.ebuild, -bluez-libs-3.20.ebuild, -bluez-libs-3.22.ebuild,
+  -bluez-libs-3.23.ebuild, -bluez-libs-3.24.ebuild, +bluez-libs-3.28.ebuild:
+  bump to 3.28, add support for MCAP UUIDs. Cleanup old revisions
 
 *bluez-libs-3.27 (27 Feb 2008)
 
