--- a/net-wireless/bluez-utils/ChangeLog
+++ b/net-wireless/bluez-utils/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for net-wireless/bluez-utils
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/ChangeLog,v 1.117 2008/02/27 22:13:26 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-utils/ChangeLog,v 1.118 2008/03/09 21:59:59 eva Exp $
+
+*bluez-utils-3.28 (09 Mar 2008)
+
+  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
+  -bluez-utils-3.19.ebuild, -bluez-utils-3.20.ebuild,
+  -bluez-utils-3.22.ebuild, -bluez-utils-3.23.ebuild,
+  -bluez-utils-3.24.ebuild, +bluez-utils-3.28.ebuild:
+  bump to 3.28. cleanup old revisions.
 
 *bluez-utils-3.27 (27 Feb 2008)
 
