--- a/dev-python/pygtk/ChangeLog
+++ b/dev-python/pygtk/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/pygtk
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.175 2008/01/07 00:04:20 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.176 2008/03/09 22:17:58 eva Exp $
+
+  09 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> -pygtk-2.8.6.ebuild,
+  pygtk-2.12.1.ebuild:
+  remove opengl dependencies, fix bug #212434
+  remove custom SRC_URI, fix bug #205676
+  remove old revision
 
 *pygtk-2.12.1 (06 Jan 2008)
 
