--- a/net-firewall/conntrack-tools/ChangeLog
+++ b/net-firewall/conntrack-tools/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-firewall/conntrack-tools
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.3 2008/03/09 22:40:05 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack-tools/ChangeLog,v 1.4 2008/03/09 22:46:31 swegener Exp $
+
+  09 Mar 2008; Sven Wegener <swegener@gentoo.org>
+  conntrack-tools-0.9.5.ebuild:
+  The blocker on net-firewall/conntrack is just a run-time blocker.
 
   09 Mar 2008; Sven Wegener <swegener@gentoo.org>
   conntrack-tools-0.9.5.ebuild:
