--- a/net-firewall/conntrack/ChangeLog
+++ b/net-firewall/conntrack/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/conntrack
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack/ChangeLog,v 1.6 2007/08/08 14:12:24 gustavoz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/conntrack/ChangeLog,v 1.7 2008/03/09 22:47:10 swegener Exp $
+
+  09 Mar 2008; Sven Wegener <swegener@gentoo.org>
+  conntrack-1.00_beta2.ebuild:
+  Add blocker on net-firewall/conntrack-tools as both provide
+  /usr/sbin/conntrack and conntrack-tools already blocks this package.
 
   08 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
   conntrack-1.00_beta2.ebuild:
