--- a/app-text/xpdf/ChangeLog
+++ b/app-text/xpdf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/xpdf
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.166 2007/11/21 21:43:14 genstef Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/xpdf/ChangeLog,v 1.167 2008/03/09 23:23:27 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> xpdf-3.01-r8.ebuild:
+  Drop to ~mips due to unstable deps
 
   21 Nov 2007; Stefan Schweizer <genstef@gentoo.org> -xpdf-3.02.ebuild,
   xpdf-3.02-r1.ebuild:
