--- a/media-gfx/gimp/ChangeLog
+++ b/media-gfx/gimp/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/gimp
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.250 2008/03/03 15:00:26 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/gimp/ChangeLog,v 1.251 2008/03/09 23:30:20 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> gimp-2.3.19.ebuild:
+  Drop to ~mips due to unstable deps
 
 *gimp-2.4.5 (03 Mar 2008)
 
