--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1192 2008/03/08 23:11:28 yngwin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1193 2008/03/09 23:39:37 ingmar Exp $
+
+  09 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org> package.mask:
+  Update Qt-4.4.0_beta mask message.
 
   08 Mar 2008; Ben de Groot <yngwin@gentoo.org> package.mask:
   Masking sys-devel/libtool-2.2 which is causing breakage.
