--- a/dev-java/tagsoup/ChangeLog
+++ b/dev-java/tagsoup/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/tagsoup
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.30 2008/03/08 19:59:19 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tagsoup/ChangeLog,v 1.31 2008/03/09 23:44:00 ken69267 Exp $
+
+  09 Mar 2008; Kenneth Prugh <ken69267@gentoo.org> tagsoup-1.2.ebuild:
+  amd64 stable, bug #212662
 
   08 Mar 2008; Markus Meier <maekke@gentoo.org> tagsoup-1.2.ebuild:
   x86 stable, bug #212662
