--- a/net-libs/courier-authlib/ChangeLog
+++ b/net-libs/courier-authlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/courier-authlib
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.67 2007/07/02 14:51:44 peper Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/courier-authlib/ChangeLog,v 1.68 2008/03/09 23:44:25 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> courier-authlib-0.58.ebuild:
+  Drop to ~mips due to unstable deps
 
   02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
   courier-authlib-0.58.ebuild:
