--- a/www-client/elinks/ChangeLog
+++ b/www-client/elinks/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for www-client/elinks
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.96 2008/02/16 19:50:35 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/elinks/ChangeLog,v 1.97 2008/03/09 23:52:31 ricmm Exp $
+
+  09 Mar 2008; <ricmm@gentoo.org> elinks-0.11.2.ebuild,
+  elinks-0.11.2-r1.ebuild, elinks-0.11.3.ebuild:
+  Drop to ~mips due to unstable deps
 
 *elinks-0.11.4_rc0 (16 Feb 2008)
 
