--- a/dev-lang/gwydion-dylan/ChangeLog
+++ b/dev-lang/gwydion-dylan/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-lang/gwydion-dylan
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gwydion-dylan/ChangeLog,v 1.3 2007/07/05 23:52:47 ulm Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gwydion-dylan/ChangeLog,v 1.4 2008/03/09 23:56:19 araujo Exp $
+
+*gwydion-dylan-2.4.0-r1 (09 Mar 2008)
+
+  09 Mar 2008; Luis F. Araujo <araujo@gentoo.org> +files/gd-gc.patch,
+  +gwydion-dylan-2.4.0-r1.ebuild:
+  New revision bump fixing bug #189153
 
   05 Jul 2007; Ulrich Mueller <ulm@gentoo.org>
   files/50gwydion-dylan-gentoo.el, gwydion-dylan-2.4.0.ebuild:
