--- a/net-misc/nxnode/ChangeLog
+++ b/net-misc/nxnode/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/nxnode
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.22 2008/02/18 17:54:44 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/nxnode/ChangeLog,v 1.23 2008/03/10 00:55:38 voyageur Exp $
+
+  07 Mar 2008; Bernard Cafarelli <voyageur@gentoo.org>
+  nxnode-3.0.0-r3.ebuild, -nxnode-3.0.0-r4.ebuild, -nxnode-3.1.0.ebuild,
+  -nxnode-3.1.0-r1.ebuild, nxnode-3.1.0-r2.ebuild:
+  Fix chown on license file (create nx user preventively, use nx:0), thanks pva
+  Remove some versions (security bug #210317)
 
   18 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
   nxnode-3.1.0-r2.ebuild:
