--- a/sys-libs/db/ChangeLog
+++ b/sys-libs/db/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-libs/db
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.240 2008/02/29 18:43:03 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/db/ChangeLog,v 1.241 2008/03/10 01:35:13 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> db-4.2.52_p4-r2.ebuild:
+  Drop to ~mips due to unstable deps
 
   29 Feb 2008; Santiago M. Mola <coldwind@gentoo.org> db-4.3.29-r2.ebuild:
   amd64 stable wrt bug #204213
