--- a/dev-libs/expat/ChangeLog
+++ b/dev-libs/expat/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/expat
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.69 2008/03/09 22:22:54 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/expat/ChangeLog,v 1.70 2008/03/10 01:39:03 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> expat-1.95.8.ebuild:
+  Drop to ~mips due to unstable deps
 
   09 Mar 2008; Mart Raudsepp <leio@gentoo.org>
   -files/expat-2.0.0-test-64bit.patch, -files/expat-2.0.0-test-cpp.patch,
