--- a/app-crypt/opencdk/ChangeLog
+++ b/app-crypt/opencdk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/opencdk
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/opencdk/ChangeLog,v 1.67 2008/01/14 18:48:06 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/opencdk/ChangeLog,v 1.68 2008/03/10 01:43:23 ricmm Exp $
+
+  10 Mar 2008; <ricmm@gentoo.org> opencdk-0.5.5.ebuild:
+  Drop to ~mips due to unstable deps
 
   14 Jan 2008; Christoph Mende <angelos@gentoo.org> opencdk-0.6.6.ebuild:
   Stable on amd64 wrt bug #199297
