--- a/x11-proto/inputproto/ChangeLog
+++ b/x11-proto/inputproto/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-proto/inputproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.61 2007/12/19 23:32:40 cla Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/inputproto/ChangeLog,v 1.62 2008/03/10 01:46:41 dberkholz Exp $
+
+*inputproto-1.4.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +inputproto-1.4.3.ebuild:
+  Bump.
 
   19 Dec 2007; Dawid Węgliński <cla@gentoo.org> inputproto-1.4.2.1.ebuild:
   Stable on x86 (bug #202087)
