--- a/x11-proto/printproto/ChangeLog
+++ b/x11-proto/printproto/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-proto/printproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.27 2007/02/04 18:08:36 joshuabaergen Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/printproto/ChangeLog,v 1.28 2008/03/10 01:47:22 dberkholz Exp $
+
+*printproto-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +printproto-1.0.4.ebuild:
+  Bump.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   printproto-1.0.3.ebuild:
