--- a/x11-proto/xproto/ChangeLog
+++ b/x11-proto/xproto/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-proto/xproto
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.56 2007/10/09 09:41:31 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-proto/xproto/ChangeLog,v 1.57 2008/03/10 01:48:03 dberkholz Exp $
+
+*xproto-7.0.12 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xproto-7.0.12.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xproto-7.0.7.ebuild:
   Drop old ebuilds.
