--- a/x11-libs/libX11/ChangeLog
+++ b/x11-libs/libX11/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-libs/libX11
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.90 2008/02/28 19:39:20 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libX11/ChangeLog,v 1.91 2008/03/10 01:49:57 dberkholz Exp $
+
+*libX11-1.1.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +libX11-1.1.4.ebuild:
+  Bump.
 
 *libX11-1.1.3-r1 (28 Feb 2008)
 
