--- a/x11-libs/libXfont/ChangeLog
+++ b/x11-libs/libXfont/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libXfont
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfont/ChangeLog,v 1.91 2008/01/20 18:17:19 rbu Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXfont/ChangeLog,v 1.92 2008/03/10 01:52:39 dberkholz Exp $
+
+*libXfont-1.3.2 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +libXfont-1.3.2.ebuild:
+  Bump.
 
   20 Jan 2008; Robert Buchholz <rbu@gentoo.org> libXfont-1.3.1-r1.ebuild:
   amd64 stable (bug #204362)
