--- a/x11-libs/libXinerama/ChangeLog
+++ b/x11-libs/libXinerama/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-libs/libXinerama
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXinerama/ChangeLog,v 1.38 2008/01/31 04:24:55 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libXinerama/ChangeLog,v 1.39 2008/03/10 01:51:14 dberkholz Exp $
+
+*libXinerama-1.0.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +libXinerama-1.0.3.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>;
   -libXinerama-1.0.1.ebuild:
