--- a/x11-apps/mkfontdir/ChangeLog
+++ b/x11-apps/mkfontdir/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/mkfontdir
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.39 2007/10/09 09:18:10 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontdir/ChangeLog,v 1.40 2008/03/10 01:53:42 dberkholz Exp $
+
+*mkfontdir-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +mkfontdir-1.0.4.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
   -mkfontdir-1.0.2.ebuild:
