--- a/x11-apps/mkfontscale/ChangeLog
+++ b/x11-apps/mkfontscale/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/mkfontscale
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.38 2007/10/09 09:17:22 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/mkfontscale/ChangeLog,v 1.39 2008/03/10 01:54:21 dberkholz Exp $
+
+*mkfontscale-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +mkfontscale-1.0.4.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
   -mkfontscale-1.0.1.ebuild:
