--- a/x11-apps/x11perf/ChangeLog
+++ b/x11-apps/x11perf/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/x11perf
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.20 2007/09/28 04:14:15 kumba Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/x11perf/ChangeLog,v 1.21 2008/03/10 01:54:57 dberkholz Exp $
+
+*x11perf-1.5 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +x11perf-1.5.ebuild:
+  Bump.
 
   28 Sep 2007; Joshua Kinard <kumba@gentoo.org> x11perf-1.4.1.ebuild:
   Stable on mips, per #191615.
