--- a/x11-apps/xauth/ChangeLog
+++ b/x11-apps/xauth/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xauth
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.39 2007/10/09 09:07:08 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xauth/ChangeLog,v 1.40 2008/03/10 01:55:38 dberkholz Exp $
+
+*xauth-1.0.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xauth-1.0.3.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xauth-1.0.1.ebuild:
   Drop old ebuilds.
