--- a/x11-apps/xdm/ChangeLog
+++ b/x11-apps/xdm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xdm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.84 2008/03/07 15:56:31 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xdm/ChangeLog,v 1.85 2008/03/10 02:05:13 dberkholz Exp $
+
+*xdm-1.1.7 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xdm-1.1.7.ebuild:
+  Bump.
 
   07 Mar 2008; Brent Baude <ranger@gentoo.org> xdm-1.1.6-r1.ebuild:
   keyworded ~arch for ppc64, bug 211014
