--- a/x11-apps/xev/ChangeLog
+++ b/x11-apps/xev/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xev
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xev/ChangeLog,v 1.19 2007/02/28 19:00:16 welp Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xev/ChangeLog,v 1.20 2008/03/10 01:56:52 dberkholz Exp $
+
+*xev-1.0.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xev-1.0.3.ebuild:
+  Bump.
 
   28 Feb 2007; Peter Weller <welp@gentoo.org> xev-1.0.2.ebuild:
   Keyworded x86-fbsd
