--- a/x11-apps/xfs/ChangeLog
+++ b/x11-apps/xfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xfs
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.50 2008/01/31 03:46:00 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xfs/ChangeLog,v 1.51 2008/03/10 01:57:30 dberkholz Exp $
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; ChangeLog:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -xfs-1.0.4.ebuild,
   -xfs-1.0.4-r1.ebuild:
