--- a/x11-apps/xinit/ChangeLog
+++ b/x11-apps/xinit/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.112 2008/01/13 22:27:31 philantrop Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.113 2008/03/10 01:58:15 dberkholz Exp $
+
+*xinit-1.0.8 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +files/gentoo-startx-customization-1.0.8.patch, +xinit-1.0.8.ebuild:
+  Bump.
 
 *xinit-1.0.5-r2 (13 Jan 2008)
 
