--- a/x11-apps/xkbcomp/ChangeLog
+++ b/x11-apps/xkbcomp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-apps/xkbcomp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.44 2007/10/09 09:02:58 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xkbcomp/ChangeLog,v 1.45 2008/03/10 01:58:56 dberkholz Exp $
+
+*xkbcomp-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +xkbcomp-1.0.4.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
   -xkbcomp-1.0.2.ebuild:
