--- a/x11-apps/xprop/ChangeLog
+++ b/x11-apps/xprop/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xprop
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xprop/ChangeLog,v 1.31 2008/02/05 11:37:42 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xprop/ChangeLog,v 1.32 2008/03/10 01:59:37 dberkholz Exp $
+
+*xprop-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xprop-1.0.4.ebuild:
+  Bump.
 
   05 Feb 2008; Markus Rothe <corsair@gentoo.org> xprop-1.0.3.ebuild:
   Stable on ppc64
