--- a/x11-apps/xrandr/ChangeLog
+++ b/x11-apps/xrandr/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xrandr
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.45 2007/10/09 08:44:53 dberkholz Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrandr/ChangeLog,v 1.46 2008/03/10 02:00:19 dberkholz Exp $
+
+*xrandr-1.2.3 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xrandr-1.2.3.ebuild:
+  Bump.
 
   09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>; -xrandr-1.0.2.ebuild,
   -xrandr-1.2.0.ebuild, -xrandr-1.2.1.ebuild:
