--- a/x11-apps/xrdb/ChangeLog
+++ b/x11-apps/xrdb/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xrdb
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.43 2007/12/20 00:04:34 cla Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xrdb/ChangeLog,v 1.44 2008/03/10 02:00:59 dberkholz Exp $
+
+*xrdb-1.0.5 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xrdb-1.0.5.ebuild:
+  Bump.
 
   19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xrdb-1.0.4.ebuild:
   Stable on x86 (bug #202087)
