--- a/x11-apps/xset/ChangeLog
+++ b/x11-apps/xset/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-apps/xset
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xset/ChangeLog,v 1.36 2007/12/20 00:24:46 cla Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xset/ChangeLog,v 1.37 2008/03/10 02:01:40 dberkholz Exp $
+
+*xset-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +xset-1.0.4.ebuild:
+  Bump.
 
   19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xset-1.0.3.ebuild:
   Stable on x86 (bug #202087)
