--- a/x11-wm/twm/ChangeLog
+++ b/x11-wm/twm/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/twm
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/twm/ChangeLog,v 1.34 2008/01/31 04:42:52 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/twm/ChangeLog,v 1.35 2008/03/10 02:46:29 dberkholz Exp $
+
+*twm-1.0.4 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; +twm-1.0.4.ebuild:
+  Bump.
 
   31 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; -twm-1.0.1.ebuild,
   -twm-1.0.2.ebuild:
