--- a/media-fonts/font-xfree86-type1/ChangeLog
+++ b/media-fonts/font-xfree86-type1/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-fonts/font-xfree86-type1
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-xfree86-type1/ChangeLog,v 1.21 2008/02/24 12:12:40 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/font-xfree86-type1/ChangeLog,v 1.22 2008/03/10 02:50:35 dberkholz Exp $
+
+*font-xfree86-type1-1.0.1 (10 Mar 2008)
+
+  10 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>;
+  +font-xfree86-type1-1.0.1.ebuild:
+  Bump.
 
   24 Feb 2008; Raúl Porcel <armin76@gentoo.org>
   font-xfree86-type1-1.0.0.ebuild:
