--- a/dev-db/mysql/ChangeLog
+++ b/dev-db/mysql/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.447 2008/01/28 07:06:09 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.448 2008/03/10 02:55:18 robbat2 Exp $
+
+*mysql-5.0.56 (10 Mar 2008)
+
+  10 Mar 2008; Robin H. Johnson <robbat2@gentoo.org> +mysql-5.0.56.ebuild:
+  5.0.56 release, just as a plain version bump from 5.0.54. More patches to
+  follow in -r1.
 
   28 Jan 2008; Jeroen Roovers <jer@gentoo.org> mysql-5.0.54.ebuild:
   Stable for HPPA (bug #201669).
